samples/_failures_safe/1761459827_cb4b1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d70756c.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_0d70756c.c:131:13: error: expected declaration or statement at end of input
  131 |             matrix_set(result, j, i, matrix_get(a, i, j));
      |             ^~~~~~~~~~
./samples/SAFE/__tmp_0d70756c.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d70756c.c:131:13: error: expected declaration or statement at end of input
